# Math_Algorithm_ws

./: LICENSE  README.md
books/mathalgo/chp2/: Dec2Bin.cpp  code211.cpp  code212.cpp  code213.cpp  code221.cpp  code241.cpp  code242.cpp  code243.cpp  prb213.cpp  prb224.cpp  prb253.cpp  prb254.cpp
dev/Common/: MainTypeDef.h
dev/Lib/: RB_Math.c  RB_Math.h
dev/RBMath/: rb_common.h  rb_math.h  rb_type.h
dev/Tools/: Kbhit.h
dev/example/aabb_oj_ws/srcs/: CollisionDet.c  Mainctrl.c
dev/example/check_objects_vs_obb_ws/srcs/: CollisionDet.c  DbgCmd.c  DbgCmd.h  GnuPlot.c  Mainctrl.c  main.c
dev/example/closed_ws/rb_math_ws/: CMakeLists.txt
dev/example/closed_ws/rb_math_ws/srcs/: main.c
dev/example/create_box_ws/srcs/: DbgCmd.c
dev/example/create_capsule_vs_capsule_ws/srcs/: CollisionDet.c  Mainctrl.c
dev/example/create_capsule_vs_obb_ws/srcs/: CollisionDet.c  DbgCmd.c
dev/example/create_collision_det_ws/srcs/: DbgCmd.c  GnuPlot.c
dev/example/create_cylinder_ws/srcs/: DbgCmd.c  GnuPlot.c
dev/example/create_polygonal_prism_ws/srcs/: CollisionDet.c  DbgCmd.c  DbgCmd.h  GnuPlot.c
dev/example/create_round_rectangle_vs_obb_ws/srcs/: CollisionDet.c  DbgCmd.c  DbgCmd.h  GnuPlot.c
dev/example/create_roundbox_vs_obb_ws/srcs/: DbgCmd.c
dev/example/create_roundbox_ws/srcs/: DbgCmd.c  DbgCmd.h  GnuPlot.c
dev/example/create_sphere_vs_obb_ws/: CMakeLists.txt
dev/example/create_sphere_vs_obb_ws/srcs/: CollisionDet.c  DbgCmd.c  DbgCmd.h  GnuPlot.c
dev/example/create_sphere_vs_triangle_ws/srcs/: CollisionDet.c  DbgCmd.c
dev/example/create_sphere_ws/srcs/: DbgCmd.c  DbgCmd.h  GnuPlot.c
dev/example/fix_capsule_vs_obb_ws/srcs/: CollisionDet.c  CollisionDet.h
dev/example/plot_init_ws/srcs/: DbgCmd.c  GnuPlot.c
old_dev/Common/: MainCommon.h
old_dev/Lib/: RB_Math.h  RB_Math_UT.c
old_dev/Tools/: Kbhit.c
(+61 files in other folders)
